--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,93 @@
 
 }
 
+.debug{
+    border: 1px solid red;
+}
+
+
+/* header */
+header{
+    width: 100%;
+    height: 70px;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    border-bottom: var(--lightgrey);
+
+
+
+}
+
+
+
+/* body */
+
+body{
+    font-family: 'Open Sans', sans-serif;
+}
+
+/* main */
+main{
+    padding-top: 70px;
+
+}
+
+/* footer */
+
+footer{
+    max-width: 100%;
+    border: 1px solid red;
+}
+
+
+/* container */
+
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.inner-container{
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+#clie-logos{
+    max-width: 100%;
+}
+
+
+
+/* flex */
+
+
+.d-flex{
+    display: flex;
+    flex-flow: row wrap;
+
+}
+
+.justco-spacebtw{
+    justify-content: space-between;
+}
+
+.justco-start{
+    justify-content: start;
+}
+
+.aligit-center{
+    align-items: center;
+
+}
+
+.aligcon-center{
+    align-content: center;
+}
+
+
+/* text */
+
+ul{
+    list-style: none;
+}
