--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,13 @@ main{
     background-color: var(--lightgrey);
 }
 
+#trial{
+
+    max-width: 100%;
+    background-color: var(--lightgrey);
+
+}
+
 /* footer */
 
 footer{
@@ -77,12 +84,14 @@ footer{
 .container{
     max-width: 1200px;
     margin: 0 auto;
+    margin-bottom: 100px;
     
 }
 
 .inner-container{
     max-width: 1000px;
     margin: 0 auto;
+    margin-bottom: 100px;
     
 }
 
@@ -132,6 +141,11 @@ footer{
 
 }
 
+.no-wrap-flex{
+    display: flex;
+    flex-flow: row nowrap;
+}
+
 .justco-spacebtw{
     justify-content: space-between;
 }
@@ -162,7 +176,7 @@ ul{
 header a{
     font-size: 0.8rem;
     text-decoration: none;
-    color: #000000;
+    color: var(--black);
     padding: 0 10px;
     
 }
@@ -175,19 +189,26 @@ header a{
 }
 
 #hero li{
-    padding-bottom: 30px;
+    padding-bottom: 25px;
 }
 
 #hero a{
 
     text-decoration: none;
+    display: inline-block;
 }
 
 
+/* freccia giu hero */
+
 .hero-left li:last-child{
-    font-size: rem;
+    font-size: 2.3rem;
+    margin: 30px 0 -20px 0;
+}
+
+.black-text{
+
     color: var(--black);
-    
 }
 
 
@@ -205,7 +226,7 @@ header a{
 
 
 .jumbo-img{
-    width: 80%;
+    width: 90%;
     position: absolute;
 
 }
