--- a/css/style.css
+++ b/css/style.css
@@ -84,20 +84,26 @@ footer{
 .container{
     max-width: 1200px;
     margin: 0 auto;
-    
-    
+
+
 }
 
 .inner-container{
     max-width: 1000px;
     margin: 0 auto;
-    
-    
+
+
 }
 
-.margin-b100{
-    margin-bottom: 100px;
+.margin-b150{
+    margin-bottom: 150px;
 
+}
+
+.icon-rpad5{
+    padding-right: 5px;
+    
+    
 }
 
 .padding-b30{
@@ -124,11 +130,26 @@ footer{
 }
 
 .plans-box{
-    width: calc((100% / 3) -20px);
+    width: calc((100% / 3));
     border: 1px solid var(--lightgrey);
-    
+
 }
 
+.plans-boxwide{
+    width: 100%;
+    border: 1px solid var(--lightgrey);
+    margin-top: 30px;
+}
+
+.team-right{
+width: 30%;
+
+}
+
+.team-left{
+    width: 70%;
+
+}
 
 
 
@@ -140,7 +161,7 @@ footer{
     padding: 5px 15px;
     background-color: var(--blue-btn);
     color: var(--white-bg);
-   
+
 }
 
 
@@ -148,6 +169,7 @@ footer{
     padding: 10px 15px;
     background-color: var(--blue-btn);
     color: var(--white-bg);
+    text-decoration: none;
 
 }
 
@@ -193,25 +215,25 @@ ul{
 }
 
 
-
-
 header a{
     font-size: 0.8rem;
     text-decoration: none;
     color: var(--black);
     padding: 0 10px;
-    
+
 }
 
 #hero h1{
     font-size: 4.5rem;
     padding: 80px 0 40px 0;
     font-weight: 900;
-    
+
 }
 
 #hero li{
-    padding-bottom: 25px;
+    padding-bottom: 30px;
+    
+
 }
 
 #hero a{
@@ -219,6 +241,27 @@ header a{
     text-decoration: none;
     display: inline-block;
 }
+
+
+#plans h2{
+    font-size: 1.5rem;
+    
+}
+
+
+
+#plans li{
+    padding-bottom: 20px;
+    font-size: 0.8rem;
+    display: block;
+
+}
+
+
+/* 
+.text-interline{
+    line-height: 45px;
+} */
 
 
 .black-text{
@@ -237,11 +280,20 @@ header a{
 }
 
 
+
+
 .grey-break{
     border-bottom: 1px solid var(--lightgrey);
     padding-bottom: 30px;
-    
+
 }
+
+.bold{
+    font-weight: bold;
+}
+
+
+
 
 
 
@@ -262,7 +314,7 @@ header a{
 
 .logo-head{
     width: 80%;
-   
+
 }
 
 
