--- a/css/style.css
+++ b/css/style.css
@@ -190,9 +190,13 @@ width: 30%;
 
 .partn-right{
     width: 40%;
-    padding: 40px;
+    padding: 45px;
     
 
+}
+
+.tools-box{
+    width: calc((100% / 3) - 20px) ;
 }
 
 
@@ -263,6 +267,10 @@ width: 30%;
     gap: 50px;
 }
 
+.gap-20{
+    gap: 20px;
+}
+
 .disp-block{
     display: block;
 }
@@ -310,6 +318,21 @@ header a{
     font-size: 2rem;
 }
 
+#tools h1{
+    font-size: 2.3rem;
+    padding-bottom: 30px;
+    
+}
+
+#tools p{
+    font-size: .8rem;
+}
+
+
+
+#tools h2{
+    font-size: 1.3rem;
+}
 
 
 .team-left p{
