--- a/css/style.css
+++ b/css/style.css
@@ -436,6 +436,15 @@ header a{
 
 }
 
+.clients-logos{
+
+    filter: invert(100%);
+    width: 50%;
+    margin: 0 auto;
+    
+}
+
+
 
 
 /* colori */
