--- a/css/style.css
+++ b/css/style.css
@@ -228,6 +228,16 @@ width: 30%;
 
 }
 
+.trial-left{
+    width: 55%;
+    padding: 100px 0;
+}
+
+.trial-right{
+    width: 45%;
+    padding: 100px 0;
+
+}
 
 
 /* PULSANTI */
@@ -257,6 +267,14 @@ width: 30%;
 }
 
 
+.trial-btn{
+    padding: 10px 50px;
+    text-decoration: none;
+    background-color: var(--white-bg);
+    color: var(--black);
+
+}
+
 /* flex */
 
 
@@ -282,6 +300,14 @@ width: 30%;
 
 .justco-start{
     justify-content: start;
+}
+
+.justco-center{
+    justify-content: center;
+}
+
+.justco-end{
+    justify-content: flex-end;
 }
 
 .aligit-center{
@@ -396,6 +422,12 @@ header a{
     font-size: 0.8rem;
 
 
+}
+
+#trial h2{
+    font-size: 2.4rem;
+    color: var(--bordeaux);
+    
 }
 
 
