--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ main{
 footer{
     max-width: 100%;
     border: 1px solid red;
+    background-color: var(--black);
 }
 
 
@@ -172,6 +173,8 @@ footer{
 
 }
 
+
+
 .plans-boxwide{
     width: 100%;
     border: 1px solid rgba(128, 128, 128, 0.671);
@@ -206,6 +209,7 @@ width: 30%;
 .bigbox-clie{
     width: calc(100% / 3);
     height: calc(100vw / 3);
+    overflow-y: auto;
     
 
 }
@@ -236,6 +240,20 @@ width: 30%;
 .trial-right{
     width: 45%;
     padding: 100px 0;
+
+}
+
+
+.faq-box{
+    border-top: 1px solid var(--grey-border);
+    border-bottom: 1px solid var(--grey-border);
+    max-width: 100%;
+    padding: 30px 0;
+}
+
+.no-bord{
+    border-top: 0px solid var(--grey-border);
+    border-bottom: 0px solid var(--grey-border);
 
 }
 
@@ -282,6 +300,11 @@ width: 30%;
     display: flex;
     flex-flow: row wrap;
 
+}
+
+.d-flex-rev{
+    display: flex;
+    flex-flow: row-reverse wrap;
 }
 
 .d-flex-colu{
@@ -446,7 +469,7 @@ header a{
     max-width: 100%;
     font-size: .8rem;
     padding: 8px 8px;
-    border-bottom: 1px solid var(--lightgrey);
+    border-bottom: 1px solid var(--grey-border);
     text-align: center;
 
 
@@ -567,4 +590,42 @@ header a{
 }
 
 
+.fa-check{
+    color: var(--blue-btn);
+}
 
+#plans span{
+    color: var(--black);
+}
+
+
+/* prove */
+
+.arrow {
+    width: 0.5em;
+    height: 0.5em;
+    display: inline-block;
+    vertical-align: middle;
+    border-left: 0.15em solid currentColor;
+    border-bottom: 0.15em solid currentColor;
+    transform: rotate(-45deg);
+    transition: .5s;
+    margin-right: 20px;
+   
+}
+
+  #faq .faq-box:hover .arrow:hover{
+    
+        transform: rotate(-225deg);
+        margin-top: 4px;
+    
+  }
+
+  #faq h1{
+    font-size: 2.5rem;
+    padding-bottom: 50px;
+    
+    
+  }
+
+ 
