--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,6 @@ main{
 
 footer{
     max-width: 100%;
-    border: 1px solid red;
     background-color: var(--black);
 }
 
@@ -108,6 +107,13 @@ footer{
 
 .margin-b60{
     margin-bottom: 60px;
+}
+.pad-t100{
+    padding-top: 100px;
+}
+
+.pad-b100{
+    padding-bottom: 100px;
 }
 
 .margin-b40{
@@ -220,6 +226,11 @@ width: 30%;
     
 }
 
+
+#footer select{
+    text-decoration: none;
+}
+
 .greydiv{
     width:100px ;
     height: 100px;
@@ -258,9 +269,10 @@ width: 30%;
 }
 
 
-.Footer-text{
-
+.footer-text{
+    width: calc((100% / 5) - 20px);
 }
+
 
 /* PULSANTI */
 
@@ -457,8 +469,28 @@ header a{
     
 }
 
+ .footer-text  a{
+    color: var(--white-bg);
+    text-decoration: none;
+    line-height: 40px;
+}
+
+.footer-text h2{
+    color: var(--white-bg);
+    text-decoration: none;
+    line-height: 40px;
+}
 
 
+#footer select{
+    text-decoration: none;
+    background-color: var(--black-footer);
+    border: none;
+    color: var(--white-bg);
+    padding: 30px 0;
+    border-top: 1px solid var(--grey-border);
+    
+}
 
 
 
@@ -605,6 +637,9 @@ header a{
     color: var(--black);
 }
 
+.fa-earth-americas{
+    color: var(--white-bg);
+}
 
 /* prove */
 
