--- a/css/style.css
+++ b/css/style.css
@@ -96,46 +96,6 @@ footer{
 
 }
 
-.margin-b150{
-    margin-bottom: 150px;
-
-}
-
-.margin-tb25{
-    margin: 25px 0;
-}
-
-.margin-b60{
-    margin-bottom: 60px;
-}
-.pad-t100{
-    padding-top: 100px;
-}
-
-.pad-b100{
-    padding-bottom: 100px;
-}
-
-.margin-b40{
-    margin-bottom: 40px;
-}
-
-.padding-b30{
-    padding-bottom: 30px;
-}
-
-.padding30{
-    padding: 30px;
-}
-.padding-b20{
-    padding-bottom: 20px;
-}
-
-.margin-t-40{
-    margin-top: -50px;
-}
-
-
 .icon-rpad5{
     text-indent: -1.5rem;
     padding-left: 1.2rem;
@@ -146,8 +106,6 @@ footer{
 
 
 }
-
-
 
 
 #plans ul li span{
@@ -216,6 +174,7 @@ width: 30%;
     width: calc(100% / 3);
     height: calc(100vw / 3);
     overflow-y: auto;
+    transition: .5s;
     
 
 }
@@ -223,6 +182,7 @@ width: 30%;
 .smallbox-clie{
     width: 50%;
     height: 50%;
+    transition: .5s;
     
 }
 
@@ -281,6 +241,7 @@ width: 30%;
     padding: 5px 15px;
     background-color: var(--blue-btn);
     color: var(--white-bg);
+    transition: 1s;
 
 }
 
@@ -290,6 +251,7 @@ width: 30%;
     background-color: var(--blue-btn);
     color: var(--white-bg);
     text-decoration: none;
+    transition: 1s;
 
 }
 
@@ -306,8 +268,58 @@ width: 30%;
     text-decoration: none;
     background-color: var(--white-bg);
     color: var(--black);
+    transition: 1s;
 
 }
+
+
+
+/* MARGINI & PADDING */
+
+
+.margin-b150{
+    margin-bottom: 150px;
+
+}
+
+.margin-tb25{
+    margin: 25px 0;
+}
+
+.margin-b60{
+    margin-bottom: 60px;
+}
+.pad-t100{
+    padding-top: 100px;
+}
+
+.pad-b100{
+    padding-bottom: 100px;
+}
+
+.margin-b40{
+    margin-bottom: 40px;
+}
+
+.padding-b30{
+    padding-bottom: 30px;
+}
+
+.padding30{
+    padding: 30px;
+}
+.padding-b20{
+    padding-bottom: 20px;
+}
+
+.margin-t-40{
+    margin-top: -50px;
+}
+
+/* / MARGINI & PADDING */
+
+
+
 
 /* flex */
 
@@ -473,7 +485,9 @@ header a{
     color: var(--white-bg);
     text-decoration: none;
     line-height: 40px;
+    /*text underline*/
 }
+
 
 .footer-text h2{
     color: var(--white-bg);
@@ -514,9 +528,6 @@ header a{
 
 }
 
-
-
-
 .grey-break{
     border-bottom: 1px solid var(--lightgrey);
     padding-bottom: 30px;
@@ -528,7 +539,95 @@ header a{
 }
 
 
+/* HOVER */
 
+.head-bord{
+    height: 70px;
+    padding-bottom: 25px ;
+}
+    
+
+.nav-bordbot{
+    height: 25px;
+    padding-bottom: 25px ;
+   
+}
+
+
+ .head-bord:hover .nav-bordbot{
+    border-bottom: 3px solid var(--black);
+
+}
+.arrow {
+    width: 0.5em;
+    height: 0.5em;
+    display: inline-block;
+    vertical-align: middle;
+    border-left: 0.15em solid currentColor;
+    border-bottom: 0.15em solid currentColor;
+    transform: rotate(-45deg);
+    transition: .5s;
+    margin-right: 20px;
+   
+}
+
+  #faq .faq-box:hover .arrow:hover{
+    
+        transform: rotate(-225deg);
+        margin-top: 4px;
+    
+  }
+
+  #faq h1{
+    font-size: 2.5rem;
+    padding-bottom: 50px;
+    
+    
+  }
+
+  .detail{
+    display: none;
+  }
+
+  .faq-box:hover .detail{
+
+    display: block;
+ }
+
+ .faq-box:hover .arrow{
+    transform: rotate(-225deg);
+    margin-top: 4px;
+
+ }
+
+
+ .head-btn:hover{
+    
+    background-color: var(--light-blue);
+
+ }
+
+ .blue-body-btn:hover{
+    background-color: var(--light-blue);
+
+ }
+
+ .trial-btn:hover{
+    background-color: var(--light-blue);
+    color: gold;
+ }
+
+
+ 
+.bigbox-clie:hover{
+    border:15px solid rgba(177, 169, 169, 0.582) 
+}
+
+ .smallbox-clie:hover {
+    border:15px solid rgba(177, 169, 169, 0.582)
+   
+
+ }
 
 
 
@@ -538,6 +637,12 @@ header a{
     font-size: 2.3rem;
     margin: 30px 0 -20px 0;
 }
+
+
+
+
+
+
 
 
 
@@ -592,7 +697,6 @@ header a{
 
 .green-logo{
     background-color: var(--lightgreen);
-    border:15px solid var(--border-green) ;
 }
 
 .bordeau-logo{
@@ -643,46 +747,6 @@ header a{
 
 /* prove */
 
-.arrow {
-    width: 0.5em;
-    height: 0.5em;
-    display: inline-block;
-    vertical-align: middle;
-    border-left: 0.15em solid currentColor;
-    border-bottom: 0.15em solid currentColor;
-    transform: rotate(-45deg);
-    transition: .5s;
-    margin-right: 20px;
-   
-}
 
-  #faq .faq-box:hover .arrow:hover{
-    
-        transform: rotate(-225deg);
-        margin-top: 4px;
-    
-  }
-
-  #faq h1{
-    font-size: 2.5rem;
-    padding-bottom: 50px;
-    
-    
-  }
-
-  .detail{
-    display: none;
-  }
-
-  .faq-box:hover .detail{
-
-    display: block;
- }
-
- .faq-box:hover .arrow{
-    transform: rotate(-225deg);
-    margin-top: 4px;
-
- }
 
  
