--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 
 }
 
@@ -174,7 +175,7 @@ width: 30%;
     width: calc(100% / 3);
     height: calc(100vw / 3);
     overflow-y: auto;
-    transition: .5s;
+   
     
 
 }
@@ -220,6 +221,7 @@ width: 30%;
     border-bottom: 1px solid var(--grey-border);
     max-width: 100%;
     padding: 30px 0;
+    
 }
 
 .no-bord{
@@ -260,6 +262,7 @@ width: 30%;
     color: var(--black);
     text-decoration: none;
     border: 1px solid var(--black);
+    transition: .5s;
 }
 
 
@@ -398,7 +401,7 @@ ul{
 
 
 header a{
-    font-size: 0.8rem;
+    font-size: 1rem;
     text-decoration: none;
     color: var(--black);
     padding: 0 10px;
@@ -422,6 +425,7 @@ header a{
 
     text-decoration: none;
     display: inline-block;
+    
 }
 
 
@@ -516,6 +520,7 @@ header a{
 .black-text{
 
     color: var(--black);
+    
 }
 
 .title-pbox{
@@ -587,6 +592,7 @@ header a{
 
   .detail{
     display: none;
+    
   }
 
   .faq-box:hover .detail{
@@ -619,17 +625,24 @@ header a{
 
 
  
-.bigbox-clie:hover{
-    border:15px solid rgba(177, 169, 169, 0.582) 
-}
+
 
  .smallbox-clie:hover {
     border:15px solid rgba(177, 169, 169, 0.582)
-   
 
  }
 
+ .footer-text a:hover{
+    text-decoration: underline;
 
+}
+
+
+.partn-btn:hover{
+    background-color: var(--lightgrey);
+    border-color: var(--grey-border);
+    color: var(--blue-btn);
+}
 
 /* freccia giu hero */
 
@@ -637,15 +650,6 @@ header a{
     font-size: 2.3rem;
     margin: 30px 0 -20px 0;
 }
-
-
-
-
-
-
-
-
-
 
 
 
